<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:background="@color/background">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/cd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/splash_image" />

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/repo_owner"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/nameTitle"
        tools:text="flutter" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@id/avatar" />

    <TextView
        android:id="@+id/repoNameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/repository_name"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/repoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repoNameTitle"
        tools:text="flutter/Flutter" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@id/repoName" />

    <TextView
        android:id="@+id/repoDesTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <TextView
        android:id="@+id/repoDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repoDesTitle"
        tools:text="Flutter app sdk" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@id/repoDes" />

    <TextView
        android:id="@+id/repoStarTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/star_count"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/repoForkTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <TextView
        android:id="@+id/repoStar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/repoStarTitle"
        app:layout_constraintStart_toStartOf="@id/repoStarTitle"
        app:layout_constraintTop_toBottomOf="@id/repoStarTitle"
        tools:text="350k" />

    <TextView
        android:id="@+id/repoForkTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/fork_count"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/repoWatchTitle"
        app:layout_constraintStart_toEndOf="@id/repoStarTitle"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <TextView
        android:id="@+id/repoFork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/repoForkTitle"
        app:layout_constraintStart_toStartOf="@id/repoForkTitle"
        app:layout_constraintTop_toBottomOf="@id/repoForkTitle"
        tools:text="250k" />

    <TextView
        android:id="@+id/repoWatchTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/watch_count"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/repoForkTitle"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <TextView
        android:id="@+id/repoWatch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/repoWatchTitle"
        app:layout_constraintStart_toStartOf="@id/repoWatchTitle"
        app:layout_constraintTop_toBottomOf="@id/repoWatchTitle"
        tools:text="150k" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@id/repoStar" />

    <TextView
        android:id="@+id/repoUpdatedTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/updated_on"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/repoLanguageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3" />

    <TextView
        android:id="@+id/repoUpdated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/repoUpdatedTitle"
        app:layout_constraintStart_toStartOf="@id/repoUpdatedTitle"
        app:layout_constraintTop_toBottomOf="@id/repoUpdatedTitle"
        tools:text="07-03-2022 14:35" />

    <TextView
        android:id="@+id/repoLanguageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/language"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/repoUpdatedTitle"
        app:layout_constraintTop_toBottomOf="@id/divider3" />

    <TextView
        android:id="@+id/repoLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/repoLanguageTitle"
        app:layout_constraintStart_toStartOf="@id/repoLanguageTitle"
        app:layout_constraintTop_toBottomOf="@id/repoLanguageTitle"
        tools:text="Dart" />

</androidx.constraintlayout.widget.ConstraintLayout>